--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,6 @@ requests>=2.31.0
 hyperliquid-python-sdk>=0.0.15
 eth-account>=0.9.0
 python-dotenv>=1.0.0
-schedule>=1.2.0 
+schedule>=1.2.0
+streamlit>=1.28.0
+plotly>=5.17.0 
