--- a/.gitignore
+++ b/.gitignore
@@ -4,45 +4,23 @@ __pycache__/
 *$py.class
 *.so
 .Python
-env/
 venv/
-ENV/
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
+env/
+
+# Runtime state files
+position_state.json
+trade_history.csv
+signals_*.json
 
 # IDE
 .vscode/
 .idea/
 *.swp
 *.swo
-*~
 
 # OS
 .DS_Store
 Thumbs.db
 
-# Jupyter
-.ipynb_checkpoints
-
-# Data
-*.csv
-*.pkl
-*.pickle
-
 # Logs
 *.log
-
-
