Add Telegram notifications for night and morning runs
Features:
- Create telegram_notifier.py with TelegramNotifier class
- Night run alerts: regime, top quadrants, pending entries
- Morning run alerts: confirmed/rejected, trades, position changes
- Error alerts for failures
- Test script to verify connection

Integration:
- Add --no-telegram flag to disable notifications
- Automatic alerts after each run
- Error alerts on exceptions
- Uses existing credentials from live_strats

Notifications include:
Night:
- Market regime and top quadrants
- Top 5 pending positions
- Reminder for morning run

Morning:
- Confirmation results (with 28% rejection rate)
- Confirmed and rejected tickers
- Position changes (added/removed/adjusted)
- Number of trades executed

Tested and working!

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@ trade_history.csv
 signals_*.json
 pending_entries.json
 entry_rejections.csv
+night_plan_*.txt
+morning_report_*.txt
 
 # IDE
 .vscode/
